fixed image container on mobile

--- a/src/components/Body.css
+++ b/src/components/Body.css
@@ -44,7 +44,6 @@ form button:hover {
 .meme-image-container {
     margin: 1rem auto;
     position: relative;
-    height: 60vh;
 }
 
 .meme-image--text {
@@ -69,7 +68,7 @@ form button:hover {
 }
 
 .meme-image {
-    height: 100%;
+    width: 100%;
 }
 
 /* WHATS NEXT SECTION */
@@ -126,8 +125,12 @@ form button:hover {
 }
 
 @media screen and (min-width: 800px) {
-    main {
-        /* margin-top: 2rem; */
+    .meme-image-container {
+        height: 60vh;
+    }
+
+    .meme-image {
+        height: 100%;
     }
 
     .form--input-texts-container {
